tests/coverage/misc/fail/negative/truncation/003_function_params_eof.js
// Expected error: unterminated function parameter list.
function parse(value, next
